--- a/about/index.html
+++ b/about/index.html
@@ -1152,7 +1152,7 @@ h2 + .header-anchor {
 }</style>
 	</head>
 	<body>
-		<div id = "dimLayer"></div>
+		<div id = "dimLayer">
 			<header>
 				<button id="openDrawerBtn">
 					🌳
@@ -1505,7 +1505,8 @@ h2 + .header-anchor {
 
 
 		</main>
-		<footer></footer>
+		  <footer></footer>
+      </div>
 	</body>
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
