--- a/page4/index.html
+++ b/page4/index.html
@@ -1170,7 +1170,7 @@ h2 + .header-anchor {
 }</style>
 	</head>
 	<body>
-		<div id = "dimLayer"></div>
+		<div id = "dimLayer">
 			<header>
 				<button id="openDrawerBtn">
 					🌳
@@ -1702,7 +1702,8 @@ elem(allPages, 4);
 
 
 		</main>
-		<footer></footer>
+		  <footer></footer>
+      </div>
 	</body>
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
