deploy: 18f7ec1da4f710c230471e493255922ad5f38dfe

--- a/about/index.html
+++ b/about/index.html
@@ -1152,7 +1152,7 @@ h2 + .header-anchor {
 }</style>
 	</head>
 	<body>
-		<div id="dimLayer">
+		<div id="dimLayer"></div>
 			<header>
 				<button id="openDrawerBtn">
 					🌳
@@ -1461,7 +1461,6 @@ h2 + .header-anchor {
 					</ul>
 			</nav>
 		</header>
-
 		<main>
 			<div class="flex-center">
   <img class="about-img" src="/covers/IMG_6209.webp" alt="cover image" height="auto" loading="lazy" decoding="async"/>
@@ -1506,7 +1505,6 @@ h2 + .header-anchor {
 
 		</main>
 		  <footer></footer>
-      </div>
 	</body>
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
