--- a/page8/index.html
+++ b/page8/index.html
@@ -1170,7 +1170,7 @@ h2 + .header-anchor {
 }</style>
 	</head>
 	<body>
-		<div id="dimLayer">
+		<div id="dimLayer"></div>
 			<header>
 				<button id="openDrawerBtn">
 					🌳
@@ -1479,7 +1479,6 @@ h2 + .header-anchor {
 					</ul>
 			</nav>
 		</header>
-
 		<main>
 			<!-- Delete this message, it will also remove the component CSS from the bundle -->
 
@@ -1697,7 +1696,6 @@ elem(allPages, 8);
 
 		</main>
 		  <footer></footer>
-      </div>
 	</body>
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
