--- a/about/index.html
+++ b/about/index.html
@@ -1151,9 +1151,7 @@ h2 + .header-anchor {
 
 #drawerMenu::-webkit-scrollbar-thumb:hover {
     background-color: #555b62;
-}
-
-#</style>
+}</style>
 	</head>
 	<body>
 		<div id="dimLayer"></div>
@@ -1420,6 +1418,11 @@ h2 + .header-anchor {
 												<li>
 													<a href=/blog/MATHEMATICS/Algebraic/Sets>
 														Sets
+													</a>
+												</li>
+												<li>
+													<a href=/blog/MATHEMATICS/Algebraic/cardinality-of-sets>
+														cardinality-of-sets
 													</a>
 												</li>
 										</ul>
