--- a/index.html
+++ b/index.html
@@ -1299,6 +1299,11 @@ h2 + .header-anchor {
 														recursive-power
 													</a>
 												</li>
+												<li>
+													<a href=/blog/CS/RECURSIVE/tower-of-hanoi>
+														tower-of-hanoi
+													</a>
+												</li>
 										</ul>
 									</details>
 							</li>
@@ -1591,7 +1596,7 @@ h2 + .header-anchor {
 
 <script type="text/javascript" async>
   const pageLinks = `[&quot;/index.html&quot;,&quot;/page1/index.html&quot;,&quot;/page2/index.html&quot;,&quot;/page3/index.html&quot;,&quot;/page4/index.html&quot;,&quot;/page5/index.html&quot;,&quot;/page6/index.html&quot;,&quot;/page7/index.html&quot;,&quot;/page8/index.html&quot;,&quot;/page9/index.html&quot;,&quot;/page10/index.html&quot;]`.replaceAll('&quot;','').replaceAll('[','').replaceAll(']','').split(',')
-  const postsCount = 53
+  const postsCount = 54
   let allPages = pageLinks.length
   const pagination = document.getElementById("pagination")
   const NOTHING_BUTTON = (dir='<')=>`<div class="btn">${dir}</div>`
