--- a/about/index.html
+++ b/about/index.html
@@ -1281,6 +1281,11 @@ h2 + .header-anchor {
 														recursive-power
 													</a>
 												</li>
+												<li>
+													<a href=/blog/CS/RECURSIVE/tower-of-hanoi>
+														tower-of-hanoi
+													</a>
+												</li>
 										</ul>
 									</details>
 							</li>
