--- a/about/index.html
+++ b/about/index.html
@@ -646,11 +646,14 @@ li {
 a {
 	text-decoration: none;
 }
+.nav > a[href] {
+    color:var(--fgColor-default), var(--color-fg-default);
+}
 a[href] {
 	color: var(--text-color-link);
 }
 a[href]:visited {
-	color: var(--text-color-link-visited);
+    color:var(--fgColor-default), var(--color-fg-default);
 }
 a[href]:hover,
 a[href]:active {
@@ -781,7 +784,7 @@ header {
 }
 .postlist-date {
 	font-size: 0.8125em; /* 13px /16 */
-	color: var(--color-scale-gray-4);
+    color:var(--color-fg-default);
 }
 .postlist-date {
 	word-spacing: -0.5px;
@@ -1151,6 +1154,12 @@ h2 + .header-anchor {
 
 #drawerMenu::-webkit-scrollbar-thumb:hover {
     background-color: #555b62;
+}
+
+#drawerMenu summary {
+    font:bolder;
+    font-style: oblique;
+    font-family: cursive;
 }</style>
 	</head>
 	<body>
@@ -1161,8 +1170,7 @@ h2 + .header-anchor {
 				</button>
 			<a href="/" class="home-link">zerozoo-a의 블로그</a>
 			<nav>
-				<ul class="nav">
-				<div id="drawerMenu">
+				<ul id="drawerMenu"class="nav">
 					<ul>
 						<li>Categories</li>
 						<li><a href="/">home</a></li>
