deploy: 53f59235c561180ead4c6648728b93d2841363bf

--- a/about/index.html
+++ b/about/index.html
@@ -1482,6 +1482,18 @@ h2 + .header-anchor {
 							</li>
 							<li>
 									<details>
+										<summary>temp</summary>
+										<ul>
+												<li>
+													<a href=/blog/temp/logical-implication>
+														logical-implication
+													</a>
+												</li>
+										</ul>
+									</details>
+							</li>
+							<li>
+									<details>
 										<summary>wiki</summary>
 										<ul>
 												<li>
