--- a/about/index.html
+++ b/about/index.html
@@ -1307,6 +1307,11 @@ h2 + .header-anchor {
 													</a>
 												</li>
 												<li>
+													<a href=/blog/CS/LOGIC/logical-implication>
+														logical-implication
+													</a>
+												</li>
+												<li>
 													<a href=/blog/CS/LOGIC/p%20and%20q>
 														p and q
 													</a>
@@ -1485,8 +1490,8 @@ h2 + .header-anchor {
 										<summary>temp</summary>
 										<ul>
 												<li>
-													<a href=/blog/temp/logical-implication>
-														logical-implication
+													<a href=/blog/temp/sufficiency-and-necessity>
+														sufficiency-and-necessity
 													</a>
 												</li>
 										</ul>
