--- a/about/index.html
+++ b/about/index.html
@@ -1487,6 +1487,18 @@ h2 + .header-anchor {
 							</li>
 							<li>
 									<details>
+										<summary>life</summary>
+										<ul>
+												<li>
+													<a href=/blog/life/2023-infcon-review>
+														2023-infcon-review
+													</a>
+												</li>
+										</ul>
+									</details>
+							</li>
+							<li>
+									<details>
 										<summary>temp</summary>
 										<ul>
 												<li>
