deploy: 9cc458611cf590fdaace54a92749f3b342fc7fbf

--- a/about/index.html
+++ b/about/index.html
@@ -1483,6 +1483,11 @@ h2 + .header-anchor {
 													</a>
 												</li>
 												<li>
+													<a href=/blog/MATHEMATICS/Algebraic/rational-expression>
+														rational-expression
+													</a>
+												</li>
+												<li>
 													<a href=/blog/MATHEMATICS/latex-symbols>
 														latex-symbols
 													</a>
@@ -1497,18 +1502,6 @@ h2 + .header-anchor {
 												<li>
 													<a href=/blog/life/2023-infcon-review>
 														2023-infcon-review
-													</a>
-												</li>
-										</ul>
-									</details>
-							</li>
-							<li>
-									<details>
-										<summary>temp</summary>
-										<ul>
-												<li>
-													<a href=/blog/temp/rational-expression>
-														rational-expression
 													</a>
 												</li>
 										</ul>
@@ -1541,6 +1534,11 @@ h2 + .header-anchor {
 												<li>
 													<a href=/blog/wiki/Http/post-man%EC%97%90-authorization-token-%EC%8B%AC%EA%B8%B0>
 														post-man에-authorization-token-심기
+													</a>
+												</li>
+												<li>
+													<a href=/blog/wiki/install/install-mysql-using-home-brew>
+														install-mysql-using-home-brew
 													</a>
 												</li>
 												<li>
