mod sub domains

--- a/content/sub_domains/web_gpu/index.html
+++ b/content/sub_domains/web_gpu/index.html
@@ -5,13 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/sub_domains/web_gpu/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEB_GPU</title>
-    <script type="module" crossorigin src="/sub_domains/web_gpu/assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
+    <script type="module" crossorigin src="/sub_domains/web_gpu/assets/web_gpu_instance-D-KTR6md.js"></script>
   </head>
   <body>
-    <canvas id="canvas"
-    width="800"
-    height="600"
-    style="border: black; border-style: solid;"
-    ></canvas>
+    <h1>examples</h1>
+    <ol>
+      <li>
+        <a href="src/examples/triangle/index.html">
+        triangle
+        </a>
+      </li>
+    </ol>
   </body>
 </html>
