--- a/sub_domains/web_gpu/index.html
+++ b/sub_domains/web_gpu/index.html
@@ -7,11 +7,14 @@
     <title>WEB_GPU</title>
   </head>
   <body>
-    <canvas id="canvas"
-    width="800"
-    height="600"
-    style="border: black; border-style: solid;"
-    ></canvas>
-    <script type="module" src="/src/main.ts"></script>
+    <h1>examples</h1>
+    <ol>
+      <li>
+        <a href="src/examples/triangle/index.html">
+        triangle
+        </a>
+      </li>
+    </ol>
+    <script type="module" src="/src/web_gpu_instance.ts"></script>
   </body>
 </html>
