--- a/sub_domains/web_gpu/src/examples/triangle/index.html
+++ b/sub_domains/web_gpu/src/examples/triangle/index.html
@@ -7,7 +7,7 @@
     <title>zerozoo-a의 블로그 | draw something?</title>
   </head>
   <body>
-    <canvas id="canvas"
+    <canvas id="triangle"
     width="800"
     height="600"
     style="border: black; border-style: solid;"
