--- a/about/index.html
+++ b/about/index.html
@@ -2071,7 +2071,7 @@
   </article>
   <article class="flex-center">
     <p>
-      Javascript, Typescript, Node, Java에 관심이 많습니다.
+      웹 개발에 관심이 많고 좋아합니다.
     </p>
   </article>
   <div class="space"></div>
@@ -2097,10 +2097,6 @@
   </a>
   </section>
 </div>
-
-<script async src="/js/p5.min.js"></script>
-<script async src="/js/gameOfLife/index.js"></script>
-
 
 		</main>
 		<script src="/pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#pagefind-search', showImages: false });"></script>
